--- a/style.scss
+++ b/style.scss
@@ -1,965 +1,10 @@
-html{
-  font-size: 16px;
-}
-
-body{
-  width: 99.2vw;
-}
-
-a{
-  color: #f0f0f0;
-  outline: none;
-  text-decoration: none;
-}
-
-button:focus, button:active{
-  outline: none;
-  border: none;
-}
-
-.nav{
-  width: 100%;
-
-  &__icon{
-    height: 100%;
-  }
-
-  &__wrapper{
-    max-height: 166.4px;
-  }
-
-  &__bg{
-    height: 166.4px;
-  }
-
-  &__content-wrapper{
-    height: 166.4px;
-    position: relative;
-    top: -166.4px;
-    display: flex;
-    justify-content: space-between;
-    margin: auto 10%;
-  }
-
-  &__icon-container{
-    min-width: 15%;
-    margin: 18px 0 12px;
-  }
-
-  &__list{
-    height: 100%;
-    align-content: center;
-    min-width: 60%;
-    display: flex;
-    margin: 0;
-    padding: 0;
-  }
-
-  &__log-reg{
-    min-width: 15%;
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
-  }
-}
-
-.nav-bg{
-  &__black{
-    background-color: #121111;
-    height: 80%;
-  }
-
-  &__blue{
-    background-color: #0A272C;
-    height: 20%;
-  }
-}
-
-.nav-list{
-  &__element{
-    display: inline-block;
-    color: #f0f0f0;
-    margin: auto 1vw;
-    font-size: 1.56rem;
-    text-align: center;
-    vertical-align: bottom;
-    border-top: 2px solid #000000;
-    height: 100%;
-    box-sizing: border-box;
-  }
-
-  &__href{
-    height: 100%;
-    display: flex;
-    margin: auto .5rem;
-    align-content: center;
-  }
-
-  &__text{
-    width: content-box;
-    margin: auto;
-  }
-
-  &__element:hover, &__element:focus{
-    height: 100%;
-    background-color: #f0f0f070;
-    border-top: 2px solid #f0f0f0;
-    box-sizing: border-box;
-  }
-}
-
-.log-reg{
-  &__icon-text-container{
-    display: inline-block;
-    margin: auto;
-  }
-
-  &__text{
-    color: #f0f0f0;
-    font-size: .76rem;
-    margin: 0;
-  }
-
-  &__icon{
-    height: 1.7rem;
-    display: flex;
-    justify-self: center;
-    margin: auto;
-  }
-}
-
-.header{
-  width: 100%;
-  background-image: url("img/header_bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  &__wrapper{
-    height: 58rem;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-
-  &__content-wrapper{
-    height: 100%;
-    width: 100%;
-    position: relative;
-    top: 25%;
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-  }
-
-  &__image-container{
-    margin-top: 2.3rem;
-    width: 32%;
-  }
-
-  &__image{
-    width: 100%;
-    max-width: 26.94rem;
-    max-height: 54.9rem;
-  }
-
-  &__text{
-    width: 62%;
-  }
-
-  &__titles-container{
-    width: 100%;
-  }
-
-  &__titles-lines-container{
-    width: intrinsic;
-    width: -moz-max-content;
-    width: -webkit-max-content;
-    max-width: 100%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  &__title{
-    //white-space: nowrap;
-    color: white;
-    font-size: 3.32rem;
-    margin-bottom: 0;
-    text-align: center;
-  }
-
-  &__subtitle{
-    color: white;
-    //font-family: Lato;
-    font-size: 1.84rem;
-    margin-top: 50px;
-    text-align: center;
-  }
-
-  &__lines{
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  &__buttons{
-    margin-top: 13rem;
-  }
-}
-
-.header-lines{
-  &__first-line{
-    height: 10px;
-    border-radius: 10px;
-    width: .48rem;
-    margin-right: 1.12rem;
-  }
-
-  &__second-line{
-    height: 10px;
-    border-radius: 10px;
-    width: .96rem;
-    margin: 0;
-  }
-
-  &__third-line{
-    height: 10px;
-    border-radius: 10px;
-    width: 13.52rem;
-    margin-left: .56rem;
-  }
-}
-
-.header-other-buttons{
-  display: flex;
-
-  &__type-code-button{
-    font-size: 1.12rem;
-  }
-}
-
-.header-buttons{
-  display: flex;
-  justify-content: center;
-
-  &__create-event-button{
-    margin-right: 7%;
-  }
-}
-
-.header-button{
-  white-space: nowrap;
-  //height: 3.04rem;
-  color: white;
-  //font-family: "Lato - Semibold";
-  font-size: 1.32rem;
-  font-weight: 400;
-  padding-top: 0.52rem;
-  padding-bottom: 0.52rem;
-
-  &:focus{
-    border: 2px solid #ffffff;
-  }
-}
-
-.lines{
-  &__bigger-line{
-    height: 7px;
-    border-radius: 10px;
-    width: 4.08rem;
-  }
-
-  &__smaller-line{
-    height: 7px;
-    border-radius: 10px;
-    width: .64rem;
-    margin: auto .4rem;
-  }
-}
-
-.transparent-button{
-  border: 2px solid white;
-  background-color: transparent;
-  color: #f0f0f0;
-}
-
-.white-button{
-  border: 2px solid white;
-  background-color: white;
-  color: #037693;
-}
-
-.wrapper{
-  margin: 124.8px auto 147.2px;
-}
-
-.title-container{
-  width: intrinsic;
-  width: -moz-max-content;
-  width: -webkit-max-content;
-  margin: auto;
-}
-
-.title{
-  font-weight: 300;
-  letter-spacing: 4.17px;
-  font-size: 3.32rem;
-  text-align: center;
-  color: #037693;
-  margin: 0;
-}
-
-.item-icon{
-  height: 92px;
-  width: 92px;
-}
-
-.how-it-works{
-  &__item{
-    margin: auto;
-  }
-
-  &__item .how-it-works-item__button:focus{
-    background-color: #037693;
-  }
-
-  &__item .how-it-works-item__button:focus .item-icon{
-    filter: invert(100%) sepia(0%) saturate(100%) brightness(10000%) contrast(100%);
-  }
-
-  &__items-container{
-    display: flex;
-    justify-content: space-between;
-    margin: 123px 10% 0;
-  }
-}
-
-.how-it-works-item{
-  &__button-container{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin: auto;
-  }
-
-  &__button{
-    height: 162px;
-    width: 162px;
-    border: 2px solid #037693;
-    margin-bottom: 74px;
-  }
-
-  &__text{
-    margin: 0 auto auto;
-    text-align: center;
-    font-size: 1.44rem;
-    min-height: 2.76rem;
-    max-width: 90%;
-    color: #037693;
-  }
-}
-
-.interaction{
-  background-color: #037693;
-  background-size: cover;
-
-  &__wrapper{
-    width: 85%;
-    margin: 0 auto 0 0;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__text-container{
-    width: 60%;
-  }
-
-  &__title{
-    color: #ffffff;
-    width: 60%;
-    min-width: 18.8rem;
-    //font-family: Lato;
-    font-size: 2.988rem;
-    font-weight: 700;
-    margin-bottom: 0;
-  }
-
-  &__subtitle{
-    display: inline-block;
-    color: #ffffff;
-    //font-family: Lato;
-    font-size: 1.5rem;
-    font-weight: 500;
-  }
-
-  &__text{
-    color: #ffffff;
-    //font-family: Lato;
-    font-size: .85rem;
-    letter-spacing: .25px;
-    font-weight: 300;
-    line-height: 33.33px;
-  }
-
-  &__images{
-    height: 25rem;
-    margin: 100px 100px;
-    width: 40%;
-  }
-}
-
-.interaction-logo{
-  -ms-transform: rotate(-90deg);
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  height: intrinsic;
-  height: -moz-max-content;
-  height: -webkit-max-content;
-  display: flex;
-  position: relative;
-  padding: .5em;
-  width: 16rem;
-  height: 2rem;
-  top: 6.5rem;
-  left: 1rem;
-  border: 1px solid #ffffff;
-  border-right: none;
-
-  &__text{
-    white-space: nowrap;
-    display: inline;
-    margin: 0;
-    color: #ffffff;
-    //font-family: Lato;
-    font-size: 1.8rem;
-    font-weight: 300;
-    letter-spacing: .2rem;
-    vertical-align: super;
-  }
-
-  &__line, &__dot{
-    margin: auto 0;
-  }
-}
-
-.dot{
-  background-color: #ffffff;
-  min-width: 1.2rem;
-  min-height: 1.2rem;
-  max-width: 1.2rem;
-  max-height: 1.2rem;
-  border-radius: 100%;
-}
-
-.line{
-  display: inline-block;
-  background-color: #ffffff;
-  height: 1px;
-  width: 40%;
-  min-width: 4rem;
-  vertical-align: middle;
-}
-
-.full-line{
-  margin-top: 2px;
-  height: 2px;
-  width: 100%;
-}
-
-.left-lines{
-  display: flex;
-  justify-content: flex-start;
-}
-
-.right-lines{
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-.white-line{
-  background-color: white;
-}
-
-.blue-line{
-  background-color: #037693;
-}
-
-.green-line{
-  background-color: #4ca59a;
-}
-
-.red-line{
-  background-color: #f26250;
-}
-
-.orange-line{
-  background-color: #f0a765;
-}
-
-.green-transparent-line{
-  background-color: #4ca59a50;
-}
-
-.red-transparent-line{
-  background-color: #f2625050;
-}
-
-.orange-transparent-line{
-  background-color: #f0a76550;
-}
-
-.green-text{
-  color: #4ca59a;
-}
-
-.red-text{
-  color: #f26250;
-}
-
-.orange-text{
-  color: #f0a765;
-}
-
-.second-rectangle-container{
-  position: relative;
-  top: -13.75rem;
-  left: 8.75rem;
-}
-
-.third-rectangle-container{
-  position: relative;
-  top: -27.25rem;
-}
-
-.rounded-rectangle{
-  height: 15rem;
-  width: 15rem;
-}
-
-.rounded-rectangle-text{
-  position: relative;
-  top: -9rem;
-  width: 9rem;
-  height: 3rem;
-  left: 3.1rem;
-  font-size: 1.2rem;
-  text-align: center;
-}
-
-.features{
-  &__items-table{
-    width: 80%;
-    margin: 40px auto 0;
-  }
-}
-
-.features-table{
-  &__item{
-    padding: 2rem;
-  }
-}
-
-.table-item{
-  &__icon-container{
-    height: 80px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-  }
-
-  &__icon{
-    max-height: 80px;
-    max-width: 80px;
-    margin: auto;
-  }
-
-  &__text{
-    color: #037693;
-    //font-family: Lato;
-    font-size: 1.68rem;
-    font-weight: 700;
-    text-align: center;
-    margin-bottom: 0;
-  }
-}
-
-.table-horizontal-line {
-  &__line {
-    height: 2px;
-    width: 90%;
-    margin: 20px auto;
-  }
-}
-
-.table-vertical-line {
-  &__line {
-    height: 10rem;
-    width: 2px;
-    margin: auto 20px;
-  }
-}
-
-.partners{
-  background-image: url("img/partners_bg.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-
-  &__wrapper{
-    height: 441px;
-    padding-top: 15px;
-  }
-
-  &__title{
-    height: 30%;
-    color: #ffffff;
-  }
-
-  &__images{
-    height: 70%;
-    width: 95%;
-    margin: auto;
-    display: flex;
-    align-content: center;
-  }
-
-  &__images-container{
-    width: 100%;
-    height: 70px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__icon{
-    object-fit: contain;
-  }
-}
-
-.events{
-  background-color: #e8e8e8;
-
-  &__wrapper{
-    width: 85%;
-    margin: auto;
-    padding-top: 64px;
-  }
-
-  &__title{
-    margin: auto;
-  }
-
-  &__container{
-    padding: 100px;
-    display: flex;
-    justify-content: center;
-  }
-}
-
-.event{
-  &__wrapper{
-    //height: 516.8px;
-    //max-width: 25vw;
-    background-color: #ffffff;
-    margin: auto 3px;
-    min-width: 25vw;
-  }
-
-  &__title-container{
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 30px;
-    //font-size: 1vw;
-  }
-
-  &__content-container{
-    margin: 7% auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 10%;
-  }
-
-  &__title-first{
-    text-align: center;
-    color: #ffffff;
-    font-size: 3rem;
-    margin: 0;
-    font-weight: 300;
-    text-transform: uppercase;
-    //font-family: "Lato Light";
-  }
-
-  &__title-second{
-    text-align: center;
-    color: #ffffff;
-    font-size: 3.56rem;
-    margin: 0;
-    text-transform: uppercase;
-    //font-family: "Lato - Bold";
-    font-weight: 700;
-  }
-
-  &__text{
-    font-size: 1rem;
-    margin-bottom: 5px;
-    text-align: center;
-    //font-family: Lato;
-    font-weight: 300;
-    line-height: 33.33px;
-    letter-spacing: .27px;
-  }
-
-  &__icon{
-    object-fit: contain;
-    height: 3.5rem;
-  }
-
-  &__button{
-    width: intrinsic;
-    width: -moz-max-content;
-    width: -webkit-max-content;
-    border-style: none;
-    padding: .2em 1em;
-    margin: 20px auto;
-    border-radius: 100px;
-    color: #ffffff;
-    font-size: 1.5rem;
-  }
-
-  &__wrapper:hover{
-    box-shadow: 0 0 30px grey;
-    transform: scale(1.2);
-    z-index: 1;
-  }
-}
-
-.external-event .event__title-container{
-  background-image: url("img/external-event.png");
-}
-
-.interactive-event .event__title-container{
-  background-image: url("img/interactive-event.png");
-}
-
-.internal-event .event__title-container{
-  background-image: url("img/internal-event.png");
-}
-
-.about-us{
-  &__wrapper{
-    width: 80%;
-    margin: auto 5% 100px 15%;
-  }
-
-  &__title-container{
-    margin: 70px 55% 70px 35%;
-  }
-
-  &__text-container{
-    width: 48%;
-  }
-
-  &__circles{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding-top: 2rem;
-    margin-left: 20px;
-  }
-
-  &__content-container{
-    display: flex;
-    //justify-content: space-evenly;
-  }
-
-  &__circle-container{
-    margin: 0 20px;
-  }
-}
-
-.about-us-logo{
-  width: 16rem;
-  top: 6.95rem;
-  left: -20%;
-  border-color: #037693;
-
-  &__dot{
-    background-color: #037693;
-  }
-
-  &__line{
-    background-color: #037693;
-    width: 40%;
-  }
-
-  &__text{
-    color: #037693;
-  }
-}
-
-.about-us-text{
-  &__title{
-    @extend .interaction__title;
-    font-size: 3.32rem;
-  }
-
-  &__subtitle{
-    @extend .interaction__subtitle;
-    font-size: 2.1rem;
-    //letter-spacing: .1rem;
-  }
-
-  &__title, &__subtitle{
-    margin: 0;
-    color: #037693;
-  }
-
-  &__line{
-    width: 30%;
-  }
-
-  &__text{
-    @extend .interaction__text;
-    line-height: 28px;
-    font-size: 1rem;
-    margin-top: 20px;
-    color: #000000;
-  }
-}
-
-.stats{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  &__outer-circle{
-    width: 3.8rem;
-    height: 3.8rem;
-    border-radius: 50%;
-    margin: auto auto 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__inner-circle{
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 6rem;
-    border: 1px solid #ffffff;
-  }
-
-  &__name{
-    white-space: nowrap;
-    margin: 25px auto;
-    font-size: 1.4rem;
-    text-align: center;
-    //font-family: Lato;
-    font-weight: 200;
-  }
-
-  &__numbers{
-    margin: 10px 0 0;
-    font-size: 3.32rem;
-    text-align: center;
-    //font-family: Lato;
-    font-weight: 400;
-  }
-}
-
-.footer{
-  background-color: #0d0d0d;
-
-  &__wrapper{
-    width: 80%;
-    margin: auto;
-  }
-
-  &__content-wrapper{
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto 5rem;
-    padding-top: 5rem;
-  }
-
-  &__first-col{
-    width: 19%;
-  }
-
-  &__first-col, &__second-col, &__third-col, &__fourth-col{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-  }
-
-  &__second-col, &__third-col, &__fourth-col {
-    margin-top: 4.9rem;
-    justify-content: flex-start;
-  }
-
-  &__fourth-col{
-    align-items: center;
-  }
-
-  &__icons{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__icon{
-    height: 30%;
-    margin: auto;
-  }
-
-  &__text-under-icon{
-    color: #ffffff;
-    text-align: center;
-    font-size: 1rem;
-  }
-
-  &__list-item{
-    color: #ffffff;
-    font-size: .88rem;
-  }
-
-  &__list{
-    list-style: none;
-    padding: 0;
-  }
-
-  &__title{
-    color: #ffffff;
-  }
-
-  &__subtitle{
-    font-size: .88rem;
-    color: #ffffff;
-  }
-
-  &__email-address{
-    background-color: transparent;
-    border: none;
-    border-bottom: 2px solid #ffffff;
-    color: #ffffff;
-    background-image: url("img/Envelope.png");
-    background-repeat: no-repeat;
-    background-position-x: right;
-    background-position-y: center;
-    background-size: 20px;
-    text-align: center;
-  }
-
-  &__rights-reserved{
-    color: #ffffff;
-    margin: 0 auto;
-    font-size: 1rem;
-    text-align: center;
-  }
-
-  &__rights-reserved-container{
-    padding: 1rem;
-  }
-}
+@import "styles/about-us.scss";
+@import "styles/audience-interaction.scss";
+@import "styles/common.scss";
+@import "styles/events.scss";
+@import "styles/features.scss";
+@import "styles/footer.scss";
+@import "styles/header.scss";
+@import "styles/how-it-works.scss";
+@import "styles/interaction.scss";
+@import "styles/partners.scss";
