--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,36 @@
 @import "styles/about-us.scss";
+@import "styles/about-us-logo.scss";
+@import "styles/about-us-text.scss";
 @import "styles/audience-interaction.scss";
+@import "styles/audience-interaction-buttons.scss";
+@import "styles/audience-interaction-button.scss";
+@import "styles/audience-interaction-lines.scss";
+@import "styles/audience-interaction-other-buttons.scss";
 @import "styles/common.scss";
+@import "styles/event.scss";
 @import "styles/events.scss";
+@import "styles/external-event.scss";
 @import "styles/features.scss";
+@import "styles/features-table.scss";
 @import "styles/footer.scss";
 @import "styles/header.scss";
 @import "styles/how-it-works.scss";
+@import "styles/how-it-works-item.scss";
 @import "styles/interaction.scss";
+@import "styles/interaction-logo.scss";
+@import "styles/interactive-event.scss";
+@import "styles/internal-event.scss";
+@import "styles/item-icon.scss";
+@import "styles/log-reg.scss";
+@import "styles/nav-bg.scss";
+@import "styles/nav-list.scss";
 @import "styles/partners.scss";
+@import "styles/rectangle-container.scss";
+@import "styles/rounded-rectangle.scss";
+@import "styles/rounded-rectangle-text.scss";
+@import "styles/second-rectangle-container.scss";
+@import "styles/stats.scss";
+@import "styles/table-horizontal-line.scss";
+@import "styles/table-item.scss";
+@import "styles/table-vertical-line.scss";
+@import "styles/third-rectangle-container.scss";
