--- a/styles/features.scss
+++ b/styles/features.scss
@@ -1,53 +1,8 @@
+@import "mixins.scss";
+
 .features{
   &__items-table{
     width: 80%;
     margin: 40px auto 0;
-  }
-}
-
-.features-table{
-  &__item{
-    padding: 2rem;
-  }
-}
-
-.table-item{
-  &__icon-container{
-    height: 80px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-  }
-
-  &__icon{
-    max-height: 80px;
-    max-width: 80px;
-    margin: auto;
-  }
-
-  &__text{
-    color: #037693;
-    //font-family: Lato;
-    font-size: 1.68rem;
-    font-weight: 700;
-    text-align: center;
-    margin-bottom: 0;
-  }
-}
-
-.table-horizontal-line {
-  &__line {
-    height: 2px;
-    width: 90%;
-    margin: 20px auto;
-  }
-}
-
-.table-vertical-line {
-  &__line {
-    height: 10rem;
-    width: 2px;
-    margin: auto 20px;
   }
 }
