--- a/styles/about-us-text.scss
+++ b/styles/about-us-text.scss
@@ -3,12 +3,20 @@
 
 .about-us-text{
   &__title{
-    @extend .interaction__title;
+    color: #ffffff;
+    width: 60%;
+    min-width: 18.8rem;
+    //font-family: Lato;
+    font-weight: 700;
+    margin-bottom: 0;
     font-size: 3.32rem;
   }
 
   &__subtitle{
-    @extend .interaction__subtitle;
+    display: inline-block;
+    color: #ffffff;
+    //font-family: Lato;
+    font-weight: 500;
     font-size: 2.1rem;
     //letter-spacing: .1rem;
   }
@@ -23,7 +31,9 @@
   }
 
   &__text{
-    @extend .interaction__text;
+    //font-family: Lato;
+    letter-spacing: .25px;
+    font-weight: 300;
     line-height: 28px;
     font-size: 1rem;
     margin-top: 20px;
