--- a/styles/interaction.scss
+++ b/styles/interaction.scss
@@ -60,7 +60,10 @@
   &__text{
     @include mediaScreenMaxWidth(720px){
       display: inline;
-      margin: 0;
+      text-align: center;
+      line-height: initial;
+      letter-spacing: initial;
+      margin: 30px auto;
     }
 
     color: #ffffff;
@@ -71,11 +74,21 @@
     line-height: 33.33px;
   }
 
+  &__inner-text-span{
+    @include mediaScreenMaxWidth(720px){
+      display: initial;
+      margin-bottom: 0;
+    }
+
+    display: block;
+    margin-bottom: 12px;
+  }
+
   &__images{
     @include mediaScreenMaxWidth(720px){
+      margin: 50px 0 0;
       width: 100%;
       height: fit-content;
-      margin: 0;
       display: flex;
       justify-content: space-evenly;
     }
