--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,7 @@
 @import "styles/log-reg.scss";
 @import "styles/nav-bg.scss";
 @import "styles/nav-list.scss";
+@import "styles/nav-toggle.scss";
 @import "styles/partners.scss";
 @import "styles/rectangle-container.scss";
 @import "styles/rounded-rectangle.scss";
