--- a/styles/event.scss
+++ b/styles/event.scss
@@ -2,6 +2,11 @@
 
 .event{
   &__wrapper{
+    @include mediaScreenMaxWidth(700px){
+      margin: 0;
+      background-color: transparent;
+    }
+
     //height: 516.8px;
     //max-width: 25vw;
     background-color: #ffffff;
@@ -10,13 +15,23 @@
   }
 
   &__title-container{
+    @include mediaScreenMaxWidth(700px){
+      width: fit-content;
+      margin: auto;
+    }
+
     background-repeat: no-repeat;
     background-size: cover;
     padding: 30px;
+    height: 100%;
     //font-size: 1vw;
   }
 
   &__content-container{
+    @include mediaScreenMaxWidth(700px){
+      margin: 0;
+    }
+
     margin: 7% auto;
     display: flex;
     justify-content: center;
@@ -24,7 +39,25 @@
     padding: 0 10%;
   }
 
+  &__inner-content-container{
+    @include mediaScreenMaxWidth(700px){
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
   &__title-first{
+    @include mediaScreenMaxWidth(700px){
+      display: inline;
+      font-size: 2.2rem;
+    }
+
     text-align: center;
     color: #ffffff;
     font-size: 3rem;
@@ -35,6 +68,11 @@
   }
 
   &__title-second{
+    @include mediaScreenMaxWidth(700px){
+      display: inline;
+      font-size: 2.8rem;
+    }
+
     text-align: center;
     color: #ffffff;
     font-size: 3.56rem;
@@ -45,6 +83,11 @@
   }
 
   &__text{
+    @include mediaScreenMaxWidth(700px){
+      color: #ffffff;
+      margin: 0;
+    }
+
     font-size: 1rem;
     margin-bottom: 5px;
     text-align: center;
@@ -55,6 +98,10 @@
   }
 
   &__icon{
+    @include mediaScreenMaxWidth(700px){
+      height: 4.5rem;
+    }
+
     object-fit: contain;
     height: 3.5rem;
   }
@@ -67,11 +114,14 @@
     padding: .2em 1em;
     margin: 20px auto;
     border-radius: 100px;
-    color: #ffffff;
     font-size: 1.5rem;
   }
 
   &__wrapper:hover{
+    @include mediaScreenMaxWidth(700px){
+      box-shadow: none;
+      transform: none;
+    }
     box-shadow: 0 0 30px grey;
     transform: scale(1.2);
     z-index: 1;
