--- a/styles/events.scss
+++ b/styles/events.scss
@@ -1,17 +1,33 @@
+@import "mixins.scss";
+
 .events{
   background-color: #e8e8e8;
 
   &__wrapper{
+    @include mediaScreenMaxWidth(700px){
+      width: 100%;
+      padding: 0;
+    }
+
     width: 85%;
     margin: auto;
     padding-top: 64px;
   }
 
   &__title{
+    @include mediaScreenMaxWidth(700px){
+      display: none;
+    }
+
     margin: auto;
   }
 
   &__container{
+    @include mediaScreenMaxWidth(700px){
+      padding: 0;
+      flex-direction: column;
+    }
+
     padding: 100px;
     display: flex;
     justify-content: center;
