--- a/styles/header.scss
+++ b/styles/header.scss
@@ -27,7 +27,7 @@
     height: 100%;
     display: flex;
     justify-content: space-between;
-    margin: auto 10%;
+    margin: auto 5% auto 10%;
   }
 
   &__icon-container{
@@ -41,7 +41,7 @@
     min-width: 60%;
     display: flex;
     margin: 0;
-    padding: 0;
+    padding: 0 0 0 5%;
   }
 
   &__log-reg{
@@ -115,15 +115,9 @@
     }
 
     &__list{
+      padding: 0;
       display: flex;
       flex-direction: column;
     }
-  }
-}
-
-@include mediaScreenMaxWidth(720px){
-  #nav-toggle:checked + .nav__list-container{
-    display: flex;
-    flex-direction: column;
   }
 }
