--- a/styles/partners.scss
+++ b/styles/partners.scss
@@ -1,3 +1,5 @@
+@import "mixins.scss";
+
 .partners{
   background-image: url("img/partners_bg.png");
   background-size: cover;
@@ -14,6 +16,13 @@
   }
 
   &__images{
+    @include mediaScreenMaxWidth(700px){
+      width: 60%;
+      height: 100%;
+      min-width: 300px;
+      align-items: flex-end;
+    }
+
     height: 70%;
     width: 95%;
     margin: auto;
@@ -22,6 +31,12 @@
   }
 
   &__images-container{
+    @include mediaScreenMaxWidth(700px){
+      flex-wrap: wrap;
+      height: fit-content;
+      justify-content: center;
+    }
+
     width: 100%;
     height: 70px;
     margin: auto;
@@ -30,6 +45,19 @@
   }
 
   &__icon{
+    @include mediaScreenMaxWidth(700px) {
+      height: 80px;
+      width: 80px;
+      margin: 10px;
+    }
+    object-fit: contain;
+  }
+
+  &__arrow{
+    @include mediaScreenMaxWidth(700px){
+      display: none;
+    }
+
     object-fit: contain;
   }
 }
